deployments/k8s/manifests/service.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8443"
    prometheus.io/scheme: https
    prometheus.io/scrape: "true"
  labels:
    app.kubernetes.io/name: #@ data.values.name
    app.kubernetes.io/instance: #@ data.values.instance
    app.kubernetes.io/version: #@ data.values.version
  name: #@ data.values.instance + '-' + data.values.name
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    app.kubernetes.io/name: #@ data.values.name
    app.kubernetes.io/instance: #@ data.values.instance
